--- a/_sass/_components/sidebar.scss
+++ b/_sass/_components/sidebar.scss
@@ -5,7 +5,8 @@
 
 
 	background-position: center;
-	// color: $gold;
+  background-color: green;
+	color: purple;
 	height: 100%;
 	left: 0;
 	position: fixed;
@@ -36,14 +37,14 @@
 
 .sidebar__nav-link {
 	border: 0;
-	// color: $black;
+	color: purple;
 	display: block;
 	outline: 0;
 	padding: 0rem 1rem 0rem 1rem;
 	text-decoration: none;
 
 	&:hover, &:active, &:focus {
-		// color: $gold;
+		color: darkgreen;
 	}
 }
 
