add content to every page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,12 @@
 		<!-- Nav -->
 			<nav>
 				<ul class="sidebar__nav-wrapper">
+          <li>
+						<a href="/" class="sidebar__nav-link">
+							<span class="sidebar__nav-item">HOME</span>
+						</a>
+					</li>
+          <p class="sidebar__nav-hr">_______</p>
 					<li>
 						<a href="/about" class="sidebar__nav-link">
 							<span class="sidebar__nav-item">ABOUT US</span>
