--- a/_sass/_components/_sidebar.scss
+++ b/_sass/_components/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
-// 	@include mobile {
-// 		display: none;
-// 	}
+	@include mobile {
+		display: none;
+	}
 
 
 	background-position: center;
