--- a/_sass/_global/_base.scss
+++ b/_sass/_global/_base.scss
@@ -22,11 +22,11 @@ a {
 
 body {
   color: $black;
-  font-family: $bodyfont;
+  // font-family: $bodyfont;
 }
 
 h1 {
-  font-family: $headerfont;
+  // font-family: $headerfont;
   margin-top: 0rem;
 }
 
