--- a/_sass/_global/_base.scss
+++ b/_sass/_global/_base.scss
@@ -2,8 +2,9 @@
   @include mobile {
     margin-left: 0rem;
   }
-  margin-left: 15rem;
-  margin-top: 0rem;
+  margin-left: 14rem;
+  margin-right: 2rem;
+  margin-top: 2rem;
 }
 
 .jumbotron {
