--- a/_sass/_layout/_home.scss
+++ b/_sass/_layout/_home.scss
@@ -1,7 +1,62 @@
-.main-page {
-  margin: 0 auto;
-  max-width: 75vw;
-  margin-top: 10rem;
+// .main-page {
+//   margin: 0 auto;
+//   max-width: 75vw;
+//   margin-top: 0rem;
+//   padding: 2rem;
+//   margin-bottom: 25rem auto;
+// }
+
+.main-page__title {
+  text-align: center;
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+.main-page__note {
+  margin: 2rem auto;
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: italic;
+  color: purple;
+  padding: 0rem 1rem 0rem 1rem;
+}
+
+.main-page__course-title {
+  text-align: center;
+  font-size: 1.15rem;
+  text-decoration: underline;
+  padding: 0rem 5rem 0rem 5rem;
+}
+
+.main-page__course-body {
+  text-align: center;
+  font-size: .85rem;
+  padding: 0 2rem 0 2rem;
+}
+
+.main-page__course-links {
+  background: #B270D1;
+  border-radius: 2rem;
   padding: 2rem;
-  margin-bottom: 25rem auto;
+  color: $gold;
+  text-align: center;
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1rem;
+  }
+}
+
+.main-page__prineville-link {
+  border-style: solid;
+  border-color: #4B4B4B;
+}
+
+.main-page__portland-link {
+  margin-top: 2rem;
+  border-style: solid;
+  border-color: #4B4B4B;
 }
